welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == false && speed <= 60 => 0
                                ^caughtSpeeding:4: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == false && speed >= 61 && speed <= 80 => 1
                                ^caughtSpeeding:5: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == false && speed > 80 => 2
                                ^caughtSpeeding:6: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == true && speed <= 65 => 0
                                ^caughtSpeeding:7: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == true && speed >= 66 && speed <= 85 => 1
                                ^caughtSpeeding:8: error: not found: value isBithday
    case (speed, isBirthday) if isBithday == true && speed > 85 => 2
                                ^