welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  (speed, isBirthday) match {
    case (speed, isBirthday) if isBithday == false && speed <= 60 => 0
    case (speed, isBirthday) if isBithday == false && speed >= 61 && speed <= 80 => 1
    case (speed, isBirthday) if isBithday == false && speed > 80 => 2
    case (speed, isBirthday) if isBithday == true && speed <= 65 => 0
    case (speed, isBirthday) if isBithday == true && speed >= 66 && speed <= 85 => 1
    case (speed, isBirthday) if isBithday == true && speed > 85 => 2
  }
}